src/objects/loan__Automated_Payment_Setup__c.object
<CustomObject>
    <fields>
        <fullName>loan__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Amount_Type__c</fullName>
        <label>Amount Type</label>
        <picklist>
            <controllingField>loan__Type__c</controllingField>
            <picklistValues>
                <fullName>FIXED AMOUNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAST BILLED AMOUNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CURRENT PAYMENT AMOUNT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Bank_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>loan__Bank_Account__c</referenceTo>
        <relationshipName>ACH_Setup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__CL_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CL Contract</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Automated Payment Setup</relationshipLabel>
        <relationshipName>Automated_Payment_Setup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Debit_Date__c</fullName>
        <label>Debit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Frequency__c</fullName>
        <label>Frequency</label>
        <picklist>
            <controllingField>loan__Type__c</controllingField>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single-Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Monthly-PD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Mode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Mode</label>
        <referenceTo>loan__Payment_Mode__c</referenceTo>
        <relationshipName>ACH_Setup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Recurring_ACH_End_Date__c</fullName>
        <label>Recurring ACH End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Recurring_ACH_Start_Date__c</fullName>
        <label>Recurring ACH Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Setup_Date__c</fullName>
        <label>Setup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Transaction_Amount__c</fullName>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>RECURRING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ONE TIME</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Automated Payment Setup</label>
    <nameField>
        <displayFormat>APS-{0000000000}</displayFormat>
        <label>Automated Payment Setup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Automated Payment Setup</pluralLabel>
    <recordTypes>
        <fullName>loan__RECURRING</fullName>
        <active>true</active>
        <label>RECURRING</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>loan__ACH_Start_Date_greater_than_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(loan__Type__c,&apos;RECURRING&apos;) , loan__Recurring_ACH_End_Date__c  &lt; loan__Recurring_ACH_Start_Date__c )</errorConditionFormula>
        <errorMessage>ACH End Date should be greater than ACH Start Date</errorMessage>
    </validationRules>
</CustomObject>